Update pom and builds